responsive blog landing page styling.  looks like the projects page is broken on prod already, fixing that next.

--- a/app/scss/blog.scss
+++ b/app/scss/blog.scss
@@ -29,9 +29,15 @@ $f-merriweather: "Merriweather";
   width: 100%;
 }
 
-.description, .blogList {
+.blogList {
   margin: 0 auto;
-  width: 1200px;
+  width: 60%;
+}
+
+@media only screen and (max-width: 650px) {
+  .blogList {
+    width: 80%;
+  }
 }
 
 .blogPosts {
@@ -54,7 +60,7 @@ $f-merriweather: "Merriweather";
 .postText {
   margin: 24px auto;
   padding: 0 40px;
-  width: 1200px;
+  width: 60%;
 }
 
   .postText h3 {
